After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 632339 - file-roller doesn't delete directories w/ files within, leaving a 0 byte one making necesary to type folder name to completely delete it
file-roller doesn't delete directories w/ files within, leaving a 0 byte one ...
Status: RESOLVED FIXED
Product: file-roller
Classification: Applications
Component: general
2.30.x
Other Linux
: Normal normal
: ---
Assigned To: Paolo Bacchilega
file-roller-maint
Depends on:
Blocks:
 
 
Reported: 2010-10-17 06:52 UTC by supercordero_1
Modified: 2016-05-04 19:43 UTC
See Also:
GNOME target: ---
GNOME version: 2.29/2.30



Description supercordero_1 2010-10-17 06:52:56 UTC
i zipped a folder w/ folders, subfolders and files within, after deleting any folder w/ files within (Del key or context menu) there still was the folder with no files and 0 bytes long, making necesary to type folder name to delete it completely.

it's confirmed in 2.30.1 and 2.24.1 and related with integration with p7zip you can see more info at 

https://bugs.launchpad.net/ubuntu/+source/file-roller/+bug/626151

and 

https://bugs.launchpad.net/ubuntu/+source/file-roller/+bug/341357

regards..

Daniel

aditional info:

ubuntu 10.04 LTS - Lucid Lynx - release april/ 2010
system char codification: es-CO utf8 enabled
file-roller 2.30.1.1
Comment 1 arno_b 2012-11-19 12:43:03 UTC
On Ubuntu 12.10 64bits (file-roller 3.6.1.1-0ubuntu1).

This issue is still here but with ZIP archives (not tar.bz2).
To reproduce the issue:

Once a ZIP archive opened:
1/ select a non-empty folder
2/ delete it
=> the folder is still here but is empty.

The folder is still here when after having closed file-roller and re-opened it with the same archive.
Comment 2 Paolo Bacchilega 2012-11-25 14:39:11 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.
Comment 3 ZenWalker 2016-05-04 19:01:18 UTC
where is the commit that fixes this bug?

thanks