engrampa doesn't delete directories w/ files within

consider '/path/to/dir' and '/path/to/dir/' the same path

Based on FR commit: 238b11888a6d88af70d056963257a7bf2cf4192c
From: Paolo Bacchilega <paobac@src.gnome.org>
Gnome bug: https://bugzilla.gnome.org/show_bug.cgi?id=632339

closes #69